deploy/ingress/rest-server-ingress.yaml
# rest-server-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "${DOMAIN_NAME}"
    secretName: rest-server-tls
  rules:
  - host: "${DOMAIN_NAME}"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: rest-server-service
            port:
              number: 8080
