deploy/ingress/server-ingress.yaml
#server-ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "${DOMAIN_NAME}"
        - "blobs.${DOMAIN_NAME}"
      secretName: rest-server-tls
  rules:
    # Main API host
    - host: "${DOMAIN_NAME}"
      http:
        paths:
          - path: /wyd/api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rest-server-service
                port:
                  number: 8080

    # Dedicated MinIO public host
    - host: "blobs.${DOMAIN_NAME}"
      http:
        paths:
          - path: /(.+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio
                port:
                  number: 9000
